--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,9 @@
 .DS_Store
 # ignored files
 node_modules
-README-template.md
-README.md
-style-guide.md
+# README-template.md
+# README.md
+# style-guide.md
 postcss.config.js
 package.json
 package-lock.json
